1998-06-07  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus-art.el: Delete setting for
	`article-de-quoted-unreadable' and
	`article-mime-decode-quoted-printable' because they have been
	already abolished.

1998-06-07  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* texi/gnus-ja.texi: Sync up with latest gnus.texi.

	* texi/gnus.texi: Modify for Semi-gnus 6.4.0.

1998-06-06  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus.el (gnus-extract-address-components): Add
	`std11-extract-address-components' as a choice.

1998-06-06  Yoshiki Hayashi   <g740685@komaba.ecc.u-tokyo.ac.jp>

	* texi/gnus-ja.texi: Add "Composing Messages".

1998-06-04  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus-ems.el (gnus-ems-redefine): Must require 'path-util
	before call `module-installed-p'.

	* lisp/gnus.el (gnus-version-number): Update to 6.4.0.
	(gnus-version): Modify for SEMI 1.5.

	* lisp/gnus-art.el: Modify for SEMI 1.5 API.

1998-06-04  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/pop3-fma.el: New file. To handle multiple POP account.

	* lisp/gnus.el (gnus-version-number): Update to 6.3.4.
	And fix typo 5.6.10 -> 5.6.11.
	
1998-06-03  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.3.3.

	* Sync up with Gnus 5.6.11.

1998-06-03  Keisuke Mori   <ksk@ntts.com>

	* texi/gnus-ja.texi: Add "The Article Buffer".

1998-06-03  Yoshiki Hayashi   <g740685@komaba.ecc.u-tokyo.ac.jp>

	* texi/gnus-ja.texi: Add "The Summary Buffer".

1998-06-02  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.3.2.

	* Sync up with Gnus 5.6.10.

1998-05-30  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* README.semi: Add description of `shuhei-k' branch.

1998-05-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.3.1.

1998-05-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus-util.el (gnus-output-to-rmail): Guard as binary.
