@@ -1,3 +1,9 @@
+1998-06-13  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
+
+	* lisp/pop3-fma.el: New function pop3-fma-cypher-string
+	 New variable pop3-fma-cypher-key
+	 Both change by Yasuo OKABE <okabe@kuis.kyoto-u.ac.jp>
+
 1998-06-07  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* lisp/gnus-art.el: Delete setting for
